add steps and edits to index

--- a/index.html
+++ b/index.html
@@ -49,38 +49,33 @@
 									<h2>Schedule</h2>
 									<p>[insert schedule as tbl]</p>
 									<table>
-										<!-- <tr>
-										  <th>Firstname</th>
-										  <th>Lastname</th> 
-										  <th>Age</th>
-										</tr> -->
 										<tr>
 										  <td>9:00</td>
 										  <td>Check-in, enjoy a light breakfast, settle at table</td> 
 										</tr>
 										<tr>
 										  <td>9:05-9:15</td>
-										  <td>iSchool Dean, Anind Dey opening remarks</td> 
+										  <td>iSchool Dean, Dr. Anind Dey opening remarks</td> 
 										</tr>
 										<tr>
 											<td>9:15-9:25</td>
-											<td>Dream Project remarks</td> 
+											<td>Dream Project introduction</td> 
 										  </tr>
 										  <tr>
 											<td>9:30-11:45</td>
 											<td>
 												<ul class="actions">
-													<li><a href="#two" class="scrolly">Activity: Design or Development</a></li>
+													<li><a href="#two" class="scrolly">Activity: Designing to break the status quo</a></li>
 												</ul>
 											</td> 
 										  </tr>
 										  <tr>
 											<td>11:45-12:00</td>
-											<td>Lunch buffet</td> 
+											<td>Lunch buffet, taco bar by Flame catering</td> 
 										  </tr>
 										  <tr>
 											<td>12:00-12:45</td>
-											<td>Student panel</td> 
+											<td>Informatics student panel</td> 
 										  </tr>
 										  <tr>
 											<td>12:45-1:00</td>
@@ -91,67 +86,44 @@
 								</div>
 							</div>
 						</section>
-						<!-- <section> -->
-							<!-- <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section> -->
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Activity Choice</h2>
-							<p>We have created two activities to choose from! Whether you are more technically focused or design oriented, 
-								these activities will lead you through core ideas and concepts in Informatics.
+							<h2>Activity</h2>
+							<p>
+								In Informatics, we put people first. We think of the user and their diverse needs and challenges. We design technology solutions that work for <i>people</i> - and then build them. 
+								Todays activity is focused on <i><a href="https://www.ideou.com/blogs/inspiration/what-is-design-thinking">design thinking</a></i>. Utilizing core Informatics concepts, we will put aside
+								the coding, and focus on the user. You will empathise, ideate, and prototype. You will work with your team to design a digital solution to a complex social problem.
 							</p>
 							<h2 style="size:8px">Problem:</h2>
-							<p>[insert problem statement]</p>
-							<p><b>Choose one activity below to lead you through a solution</b></p>
+							<p>
+									The ACLU describes the school to prison pipeline as “a national trend wherein children are funneled out of public schools and into the juvenile and criminal justice systems. Many of these children have learning disabilities or histories of poverty, abuse, or neglect, and would benefit from additional educational and counseling services.” 
+									<br><br>
+									Check out the link about the ACLU’s reporting of this issue.
+									(https://www.aclu.org/issues/juvenile-justice/school-prison-pipeline) 
+									<br><br>
+									If you were to create a website with a collection of highlighting outside sources to help potential victims of the school-to-prison pipeline, what would that look like? What kind of services should your site include?
+									How would you format this website to ensure that it’s accessible to all children in need of services, including those with learning disabilities or children experiencing poverty?
+									If you’re creating a website specific to one type of child at risk, how would you format the information to best explain the information to your selected users?
+									How can this site be helpful with ample information without being overwhelming for those who use it?
+									
+
+							</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-diamond"></span>
-									<h3>Activity #1</h3>
-									<h3><u>Design</u></h3>
-									<p>In this activity, you will be lead through the design thinking process.
-										You will put the user first as you work with your team to design a 
-										digital solution to this complex social problem.
-									</p> 
+									<h3>Designing to <i>disrupt</i>.</h3> <h3>Designing to <i>break the status quo</i></h3>
+									
 									<ul class="actions">
-										<li><a href="https://docs.google.com/document/d/1BLhJrY21sHivvrix-OKDzqm9GSEzNn5Xo8nywUF4nbA/edit?usp=sharing" class="button">instructions</a></li>
-									</ul>
+										<li><a href="step1.html" class="button">Let's Begin</a></li>
+									</ul>									 	
+									<!-- <ul class="actions">
+										<li><a href="DesignActivity.html" class="button">instructions 1</a></li>
+										<li><a href="https://docs.google.com/document/d/e/2PACX-1vR6Vq0JjPMfZbW-dNbwq1321CfmQ8YWYwZLEYb9T4T2fb2rOhzZJtMnhomX_lT979ZpgXzSxkdcuFgN/pub" class="button">instructions 2</a></li>
+									</ul> -->
 								</section>
-								<section>
-										<span class="icon major fa-code"></span>
-										<h3>Activity #2</h3>
-										<h3><u>Development</u></h3>
-										<p>In this activity, you will need to work with your team to determine what information
-											and how to best display information through the development of a website. The information
-											you provide must be towards a solution to this complex social problem.
-										</p> 
-										<ul class="actions">
-											<li><a href="" class="button">instructions</a></li>
-										</ul>
-									</section>
 							</div>
 						</div>
 					</section>
@@ -163,12 +135,12 @@
 							<p>We are <b>Informatics.</b></p>
 							<p>We are a the Informatics Undergraduate Association (<a href="https://iuga.info/">IUGA</a>), and Women in Informatics (<a href="https://winfo.ischool.uw.edu/">WINFO</a>), Registered Student Organizations at the
 								University of Washington. We are a team of passionate developers, designers, data scientists, program managers,
-								consultants, and analysts with a fire to increase representation in STEM and share our amazing Informatics program to local high schools.
+								consultants, and analysts with a fire to increase representation in STEM and share our amazing Informatics program to local high schools and community colleges.
 							</p>
 							<p>To learn more about the University of Washington's Informatics program,
-								go to <a href="https://ischool.uw.edu">iSchool webpage</a>. 
+								please visit the <b><a href="https://ischool.uw.edu">iSchool webpage</a></b>. 
 							</p>
-							<div class="split style1">
+							<div class="style1">
 								<section>
 									<ul class="contact">
 										<li>
@@ -184,6 +156,9 @@
 									</ul>
 								</section>
 							</div>
+							<hr>
+							<p>We are <b>Dream Project.</b></p>
+							<p>To learn more about the incredible work of the UW Dream Project, check us out at the <b><a href="https://www.washington.edu/dreamproject/">Dream Project webpage</a></b>.</p>
 						</div>
 					</section>
 			</div>
@@ -192,6 +167,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
+						<img src="images/uw_logo.png" width="75px" height="50px" display="inline">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
