--- a/index.html
+++ b/index.html
@@ -48,22 +48,21 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Schedule</h2>
-									<p>[insert schedule as tbl]</p>
 									<table>
 										<tr>
-										  <td>9:00</td>
-										  <td>Check-in, enjoy a light breakfast, settle at table</td> 
+											<td>8:45</td>
+											<td>Check-in</td> 
 										</tr>
 										<tr>
-										  <td>9:05-9:15</td>
+										  <td>9:00-9:20</td>
+										  <td>Enjoy a light breakfast, settle at table</td> 
+										</tr>
+										<tr>
+										  <td>9:20-9:35</td>
 										  <td>iSchool Dean, Dr. Anind Dey opening remarks</td> 
 										</tr>
-										<tr>
-											<td>9:15-9:25</td>
-											<td>Dream Project introduction</td> 
-										  </tr>
 										  <tr>
-											<td>9:30-11:45</td>
+											<td>9:35-11:45</td>
 											<td>
 												<ul class="actions">
 													<li><a href="#two" class="scrolly">Activity: Designing to break the status quo</a></li>
