add changes to step5

--- a/step5.html
+++ b/step5.html
@@ -39,8 +39,8 @@
                                 <ol>
                                     <li>Go to this URL: <a href="https://marvelapp.com">Marvel</a>/</li>
                                     <li>Have every member create a free account online.</li>
-                                    <li>When you login, click the green “Create Project” button in the top right to start designing your paper prototype online.</li>
-                                   
+                                    <li>When you login, click the green “Create Project” button in the top right, select a mobile device as the dimensions of your project.</li>
+                                    <li>Start designing! Using the tools on Marvel, bring to life your paper prototypes and add interactions between screens.</li>
                                 </ol>
 
                                 <ul class="actions">
