add edits to activity and add imgs

--- a/step2.html
+++ b/step2.html
@@ -14,9 +14,12 @@
                     <footer id="intro" class="wrapper style1-alt">
                             <div class="inner">
                                 <ul class="menu">
-                                    <li><a href="index.html" style="font-size: 20px; color: gold">home</a></li>
-                                    <li><a href="step1.html" style="font-size: 20px; color: grey"><-- prev</a></li>
-                                    <li><a href="step3.html" style="font-size: 20px; color: grey">next --></a></li>
+                                        <li>
+                                            <a href="index.html" style="font-size: 18px; color: rgb(248, 228, 113)">home</a>
+                                        </li>
+                                        <li><a href="step1.html" style="font-size: 18px; color: rgb(165, 158, 93)"><-- step 1</a></li>
+
+                                        <li><a href="step3.html" style="font-size: 18px; color: rgb(165, 158, 93)">step 3 --></a></li>
                                 </ul>
                             </div>
                         </footer>
@@ -27,26 +30,29 @@
 						<div class="inner">
                             <div class="content">
                                 <h1 style="color:ghostwhite">Step 2</h1>
-                                <h2 style="color: darkgrey">brainstorm potential solutions</h2>
+                                <h2 style="color: rgb(248, 228, 113)">brainstorm potential solutions</h2>
                                 <hr>
 
                                 <b>Time:</b><p>35 minutes</p>								
                                 <b>Goal:</b><p> To converge on a solution that all members of the team find compelling.</p>
                                 <b>Materials:</b><p> Large sticky notes, pens</p>
+                                <!-- <img src="images/brainstorm_img.jpg" width="280px" height="190px"/> -->
                                 <br>
 
-                                <p style="color:white; font-size: 30px; font-weight: 600">think about...</p>
-                                <p>How can we begin to address this problem?
+                                <p style="color:rgb(255, 244, 183); font-size: 30px; font-weight: 600; margin-bottom: 20px">think about...</p>
+                                <p>How can we begin to address this problem? <br>
                                    What people can we help support, encourage, empower, or provide information?
                                 </p>
 
-                                <p style="color:white; font-size: 24px; font-weight: 600">HOW TO</p>
+                                <p style="color:rgb(255, 244, 183); font-size: 24px; font-weight: 600; margin-bottom: 20px">HOW TO</p>
                                 <ol>
                                     <li>First, using sticky notes and pens, individually write down any and all ideas for solutions. Think wild and wacky here!</li>
                                     <li>After 5 minutes of individually coming up with ideas, come together as a team.</li>
                                     <li>Share ideas and discuss various possibilities.</li>
                                     <li>Remember: There is no right or wrong answer. Be creative and supportive, letting all ideas be heard.</li>
                                 </ol>
+                                <p style="font-size: 14px; margin-bottom: 5px;">If your table looks something like this by the end -- you're doing great!</p>
+                                <img src="images/sticky_brainstorm.jpg" width="300" height="190"/>
 
                                 <ul class="actions">
                                     <li><a href="step3.html" class="button">Step 3</a></li>
