--- a/step5.html
+++ b/step5.html
@@ -14,9 +14,10 @@
                     <footer id="intro" class="wrapper style1-alt">
                             <div class="inner">
                                 <ul class="menu">
-                                    <li><a href="index.html" style="font-size: 20px; color: gold">home</a></li>
-                                    <li><a href="step4.html" style="font-size: 20px; color: grey"><-- prev</a></li>
-                                    <!-- <li><a href="step5.html" style="font-size: 20px; color: grey">next -->
+                                    <li>
+                                        <a href="index.html" style="font-size: 18px; color: rgb(248, 228, 113)">home</a>
+                                    </li>
+                                    <li><a href="step4.html" style="font-size: 18px; color: rgb(165, 158, 93)"><-- step 4</a></li>
                                 </ul>
                             </div>
                         </footer>
@@ -27,7 +28,7 @@
 						<div class="inner">
                             <div class="content">
                                 <h1 style="color:ghostwhite">Step 5</h1>
-                                <h2 style="color: darkgrey">high fidelity prototype</h2>
+                                <h2 style="color: rgb(248, 228, 113)">high fidelity prototype</h2>
                                 <hr>
                                 <b>Time:</b><p>25 minutes</p>								
                                 <b>Goal:</b><p>See your paper prototypes come to life as you take what you sketched and design it in an online prototyping tool.</p>
@@ -35,16 +36,17 @@
                                 
                                 <p>You already learned about and designed a low fidelity prototype. High fidelity prototypes bring more realism and detail to your ideas. In industry, professionals might use high end design tools like Adobe Illustrator or Sketch. For today, we will use a free collaborative online tool called Marvel.</p>
 
-                                <p style="color:white; font-size: 24px; font-weight: 600">HOW TO</p>
+                                <p style="color:rgb(255, 244, 183); font-size: 24px; font-weight: 600; margin-bottom: 20px">HOW TO</p>
                                 <ol>
-                                    <li>Go to this URL: <a href="https://marvelapp.com">Marvel</a>/</li>
+                                    <li>Go to this URL: <a href="https://marvelapp.com">Marvel</a></li>
                                     <li>Have every member create a free account online.</li>
                                     <li>When you login, click the green “Create Project” button in the top right, select a mobile device as the dimensions of your project.</li>
+                                    <li>Add collaborators so multiple people can work at the same time.</li>
                                     <li>Start designing! Using the tools on Marvel, bring to life your paper prototypes and add interactions between screens.</li>
                                 </ol>
-
+                                <a href="https://marvelapp.com"><img src="images/marvel.png" width="280" height="130"/></a>
                                 <ul class="actions">
-                                    <li><a href="index.html" class="button">All Done -- home</a></li>
+                                    <li><a href="https://help.marvelapp.com/hc/en-us/articles/208407175-Sharing-and-presenting-your-prototype" class="button">Share</a></li>
                                 </ul>
                             </div>  
                             </div>                         
