--- a/step3.html
+++ b/step3.html
@@ -14,10 +14,12 @@
                     <footer id="intro" class="wrapper style1-alt">
                             <div class="inner">
                                 <ul class="menu">
-                                    <li><a href="index.html" style="font-size: 20px; color: gold">home</a></li>
-                                    <li><a href="step2.html" style="font-size: 20px; color: grey"><-- prev</a></li>
-                                    <li><a href="step4.html" style="font-size: 20px; color: grey">next --></a></li>
-                                </ul>
+                                        <li>
+                                            <a href="index.html" style="font-size: 18px; color: rgb(248, 228, 113)">home</a>
+                                        </li>
+                                        <li><a href="step2.html" style="font-size: 18px; color: rgb(165, 158, 93)"><-- step 2</a></li>
+
+                                        <li><a href="step4.html" style="font-size: 18px; color: rgb(165, 158, 93)">step 4 --></a></li>                                </ul>
                             </div>
                         </footer>
 
@@ -27,7 +29,7 @@
 						<div class="inner">
                             <div class="content">
                                 <h1 style="color:ghostwhite">Step 3</h1>
-                                <h2 style="color: darkgrey">low fidelity prototyping</h2>
+                                <h2 style="color: rgb(248, 228, 113)">low fidelity prototyping</h2>
                                 <hr>
 
                                 <b>Time:</b><p>30 minutes</p>								
@@ -35,17 +37,17 @@
                                 <b>Materials:</b><p>Large index cards, scratch paper, pens, pencils <p>
                                 <br>
 
-                                <p style="color:white; font-size: 30px; font-weight: 600">what is "fidelity"?</p>
+                                <p style="color:rgb(255, 244, 183); font-size: 30px; font-weight: 600; margin-bottom: 20px">what is "fidelity"?</p>
                                 <p>The fidelity of a prototype refers to how it conveys the look and feel of the final product. It describes the level of detail and realism. Therefore “low fidelity” means all the functionality will be present, but the design and level of detail will be basic.
                                 </p>
 
-                                <p style="color:white; font-size: 30px; font-weight: 600">what is "prototyping"?</p>
+                                <p style="color:rgb(255, 244, 183); font-size: 30px; font-weight: 600; margin-bottom: 20px">what is "prototyping"?</p>
                                 <p>Prototyping is designing the first draft of a product. The fastest and easiest form of prototype is a sketch, which is a low-fidelity prototype that's created by hand. Get good at using your hands to draw things that you want to create so that you can see them, communicate them, and evaluate them.</p>
-                                <p>An example of a low fidelity prototype - you can use this as an idea of what your index might look like by the end of this step!</p>
-                                <img src="images/image1.png" alt="" data-position="center center" />
+                                <p style="font-size: 14px">An example of a low fidelity prototype - you can use this as an idea of what your index cards might look like by the end of this step!</p>
+                                <img src="images/image1.png" alt="" data-position="center center" height="300px" width="400px"/>
                                 <br>
                                 
-                                <p style="color:white; font-size: 24px; font-weight: 600">HOW TO</p>
+                                <p style="color:rgb(255, 244, 183); font-size: 24px; font-weight: 600; margin-bottom: 20px">HOW TO</p>
                                 <ol>
                                     <li>Discuss with your team: what functionality will be present? What will the user be able to do with this solution? What interactions need to be made possible in your solution?</li>
                                     <li>Write down all ideas and the various “things to do” on the solution your team decided.</li>
