--- a/step4.html
+++ b/step4.html
@@ -14,9 +14,12 @@
                     <footer id="intro" class="wrapper style1-alt">
                             <div class="inner">
                                 <ul class="menu">
-                                    <li><a href="index.html" style="font-size: 20px; color: gold">home</a></li>
-                                    <li><a href="step3.html" style="font-size: 20px; color: grey"><-- prev</a></li>
-                                    <li><a href="step5.html" style="font-size: 20px; color: grey">next --></a></li>
+                                        <li>
+                                            <a href="index.html" style="font-size: 18px; color: rgb(248, 228, 113)">home</a>
+                                        </li>
+                                        <li><a href="step3.html" style="font-size: 18px; color: rgb(165, 158, 93)"><-- step 3</a></li>
+
+                                        <li><a href="step5.html" style="font-size: 18px; color: rgb(165, 158, 93)">step 5 --></a></li>
                                 </ul>
                             </div>
                         </footer>
@@ -27,14 +30,14 @@
 						<div class="inner">
                             <div class="content">
                                 <h1 style="color:ghostwhite">Step 4</h1>
-                                <h2 style="color: darkgrey">storyboard</h2>
+                                <h2 style="color: rgb(248, 228, 113)">storyboard</h2>
                                 <hr>
                                 <b>Time:</b><p>15 minutes</p>								
                                 <b>Goal:</b><p>To understand the flow of your solution and reiterate on your design as you find areas of improvement.</p>
                                 <b>Materials:</b><p>Empty space on desk, low fidelity notecards<p>
                                 <br>
                                 
-                                <p style="color:white; font-size: 24px; font-weight: 600">HOW TO</p>
+                                <p style="color:rgb(255, 244, 183); font-size: 24px; font-weight: 600; margin-bottom: 20px">HOW TO</p>
                                 <ol>
                                     <li>Place all the index cards you designed with paper and pens in order on the table (ie. login first, then after the user logins in, what is the next screen they see?)</li>
                                     <li>As a team, walk through the process of using your application as if it were a real product.</li>
@@ -42,6 +45,9 @@
                                     <li>Share ideas out loud as you go through this "usability test" of the low fidelity prototype you created.</li>
                                     <li>Edit, add, remove - change anything to the low fidelity interfaces you have.</li>
                                 </ol>
+                                
+                                <p style="font-size:14px">As illustrated below, layout your index cards and walk through the process of interaction.</p>
+                                <img src="images/flow.jpg" width="400" height="300"/>
 
                                 <ul class="actions">
                                     <li><a href="step5.html" class="button">Step 5</a></li>
