change status quo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							
 							<p>Friday, May 24, 2019 </p>								
 							<p>	A day to collaborate, innovate, inspire, and
-								<b style="color:gold">break the status quo.</b>
+								<b style="color:gold">design to disrupt.</b>
 							</p>
 							<ul class="actions">
 								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe1bYLeoYkmFwqmiVztFwzM-x7SPlukJsjfUU-uDh3lVzdv9g/viewform?usp=sf_link" class="button" style="font-size: 16px; background-color:#E6E6FA; "><p style="color:#696969">Register Today</p></a></li>
